--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
                                     <li><a href="#services">Services</a></li>
                                     <li><a href="#gallery">Gallery</a></li>
                                     <li><a href="#equipment">Equipment</a></li>
-                                    <li><a href="#about">Contact Us</a></li>
+                                    <li><a href="#about">Contact</a></li>
                                   <li><a href="assets/images/prices.jfif" download="Price-List" >Price List</a></li>
                                 </ul>
                             </div>
